cmake_minimum_required(VERSION 2.6)
PROJECT(base)

AUX_SOURCE_DIRECTORY(./ SRC_LIST1)

SET(LIBRARY_OUTPUT_PATH ../)
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

ADD_DEFINITIONS(-W -Wall -std=c++11)

INCLUDE_DIRECTORIES(./)
LINK_DIRECTORIES(./)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST1})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} event event_core pthread)
