cmake_minimum_required(VERSION 2.6)
PROJECT(Dbproxy)

AUX_SOURCE_DIRECTORY(./ SRC_LIST1)

SET(LIBRARY_OUTPUT_PATH  ../)
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(PROJECT_BASE_PATH ../)

ADD_DEFINITIONS(-W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(./ ${PROJECT_BASE_PATH}) 
LINK_DIRECTORIES(./ ${PROJECT_BASE_PATH}/base)

ADD_LIBRARY(dbproxy STATIC ${SRC_LIST1})

TARGET_LINK_LIBRARIES(dbproxy base hiredis_vip mysqlclient_r pthread) 

