cmake_minimum_required(VERSION 2.6)
PROJECT(dbproxy)

AUX_SOURCE_DIRECTORY(./ SRC_LIST1)

SET(LIBRARY_OUTPUT_PATH  ../)
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(PROJECT_BASE_PATH ../)

ADD_DEFINITIONS(-W -Wall -std=c++11)

INCLUDE_DIRECTORIES(./ ${PROJECT_BASE_PATH}) 
LINK_DIRECTORIES(./ ${PROJECT_BASE_PATH}/base)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST1})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} base hiredis_vip mysqlclient_r pthread) 

